<resources>
    <string name="app_name">Funny</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="name">昵称</string>
    <string name="add_hint">你可以将你的所见所闻，任何有趣的新闻发布出了来，与大家一起分享！</string>
    <string name="text">正文</string>
    <string name="comments_hint">期待你的神评论</string>
    <string name="send">发送</string>
    <string name="username_hint">用户名</string>
    <string name="password_hint">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="hello">，你好</string>
    <string name="integral">积分：</string>
    <string name="prize_title">积分兑换专区</string>
    <string name="prize_hf">话费</string>
    <string name="prize_ll">流量</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="introduction">随便写点什么。。。</string>
    <string name="text_upload">点击头像上传照片</string>
    <string name="user_title">0篇投稿</string>
    <string name="welcome">无处不在</string>
    <string name="comments_time">评论时间</string>
    <string name="comments_text">评论内容</string>
    <string name="empty_text">小伙伴们快来抢沙发吧！</string>
    <string name="prize_number">请输入你的手机号码</string>
    <string name="submit">确定</string>
    <string name="logout">注销</string>
    <string name="exit">退出</string>
    <string name="publish">发表</string>
    <string name="contribute">，欢迎投稿！</string>
    <string name="pubSuccess">发表成功！</string>
    <string name="alert">提醒</string>
    <string name="uploadImage">上传头像</string>
    <string name="cancel">取消</string>
    <string name="detail">详情</string>
    <string name="pleaseLogin">请先登录！</string>
    <string name="havaContent">评论必须有内容才可以发表哦！</string>
    <string name="fromFunny">-----内容来自Funny--开心无处不在！</string>
    <string name="shareTo">分享到</string>
    <string name="shareSuccess">分享成功！</string>
    <string name="alreadyGood">您已经赞过了</string>
    <string name="loginSuccess">登陆成功！</string>
    <string name="LoginError">用户名或密码错误！请重新输入！</string>
    <string name="twoExit">再按一次退出程序</string>
    <string name="notLogin">您尚未登陆，是否先登陆？</string>
    <string name="logoutSuccess">注销成功</string>
    <string name="out">是否退出程序</string>
    <string name="integralMarket">积分商城</string>
    <string name="choosePrize">请选择需要兑换的奖品！</string>
    <string name="integralShortage">您的积分不足！</string>
    <string name="inputnumber">请输入正确的手机号码！</string>
    <string name="rechargeSuccess">充值成功！请等待充值到账！</string>
    <string name="registerSuccess">注册成功！</string>
    <string name="repeatUsername">用户名重复，注册失败！</string>
    <string name="Loading">正在加载中…</string>
    <string name="noResource">该用户没有发布更多的内容！</string>
    <string name="loadSuccess">加载成功！</string>
    <string name="timeout">距离您上次登录已超过48小时，自动登录已失效，请重新登陆！</string>
    <string name="loadAll">该用户所发表的内容已全部加载！</string>
    <string name="no_introduction">这个人很懒，什么也没有留下</string>
    <string name="img_hint">点击查看原图</string>

    <string-array name="menu_text">
        <item>个人信息</item>
        <item>积分商城</item>
    </string-array>
    <string-array name="menu_image">
        <item>R.mipmap.ic_launcher</item>
        <item>R.mipmap.ic_launcher</item>
    </string-array>


    <string-array name="popup_array">
        <item>从手机相册选择</item>
        <item>拍照</item>
        <item>取消</item>
    </string-array>
</resources>
