<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/headbar_toolbar"/>

    <FrameLayout
        android:id="@+id/register_usernamelayout"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/register_icon"
        android:gravity="center" >
        <EditText
            android:id="@+id/register_username"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/default_edittext_height"
            android:layout_marginTop="5dp"
            android:hint="@string/username_hint"
            android:paddingRight="60dp"
            android:maxLength="20"
            android:paddingLeft="55dp" >
        </EditText>
        <ImageView
            android:layout_width="22dp"
            android:layout_height="21dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/user"
            android:visibility="visible" />
    </FrameLayout>
    <FrameLayout
        android:id="@+id/register_passwordlayout"
        android:layout_width="fill_parent"
        android:layout_below="@+id/register_usernamelayout"
        android:layout_height="wrap_content"
        android:gravity="center" >
        <EditText
            android:id="@+id/register_password"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/default_edittext_height"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            android:paddingRight="60dp"
            android:hint="@string/password_hint"
            android:maxLength="20"
            android:paddingLeft="55dp" >
        </EditText>
        <ImageView
            android:layout_width="22dp"
            android:layout_height="21dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/lock"
            android:visibility="visible" />
    </FrameLayout>
    <FrameLayout
        android:id="@+id/register_namelayout"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/register_passwordlayout"
        android:gravity="center" >
        <EditText
            android:id="@+id/register_name"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/default_edittext_height"
            android:layout_marginTop="5dp"
            android:paddingRight="60dp"
            android:maxLength="20"
            android:hint="@string/name"
            android:paddingLeft="55dp" >
        </EditText>
        <ImageView
            android:layout_width="22dp"
            android:layout_height="21dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/user"
            android:visibility="visible" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/register_sexlayout"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/register_namelayout"
        android:orientation="horizontal"
         >
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_gravity="left|center_vertical"
            android:src="@drawable/sex" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_sex"
        android:layout_below="@id/register_namelayout"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_man"
            android:layout_marginLeft="50dp"
            android:text="@string/man"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_women"
            android:layout_marginLeft="50dp"
            android:text="@string/women"/>

    </RadioGroup>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_below="@+id/register_sexlayout"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="left"
        android:hint="@string/introduction"
        android:id="@+id/register_introduction"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/default_button_height"
        android:layout_below="@id/register_introduction"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:text="@string/register" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/register_icon"
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:text="@string/text_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:id="@+id/textView" />

</RelativeLayout>