<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/comments_list_icon"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />




    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/comments_list_icon"
        android:id="@+id/comments_list_name" />

    <TextView
        android:text="@string/comments_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_alignBottom="@+id/comments_list_icon"
        android:layout_toRightOf="@+id/comments_list_icon"
        android:layout_toEndOf="@+id/comments_list_icon"
        android:id="@+id/comments_list_time" />

    <TextView
        android:text="@string/comments_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comments_list_icon"
        android:layout_alignLeft="@+id/comments_list_icon"
        android:layout_alignStart="@+id/comments_list_icon"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/comments_list_comment"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>