<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEE"
    tools:context=".activity.MainActivity">

    <!--屏幕正中的部分-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--头部-->
        <include layout="@layout/headbar_toolbar" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <!--左边的侧滑-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="start"
                android:background="@color/blue"
                >
                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/menu_login"
                    android:layout_centerInParent="true"
                    android:textSize="30sp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_bg"
                    android:text="@string/login"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_info">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/menu_icon"
                        android:layout_marginTop="30dp"
                        android:layout_marginLeft="30dp"
                        />
                    <TextView
                        android:text="@string/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:id="@+id/menu_name"
                        android:layout_marginLeft="10dp"
                        android:layout_alignTop="@+id/menu_icon"
                        android:layout_toRightOf="@+id/menu_icon"
                        android:layout_toEndOf="@+id/menu_icon" />

                    <TextView
                        android:text="@string/integral"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:id="@+id/menu_integral"
                        android:layout_below="@+id/menu_icon"
                        android:layout_marginTop="10dp"
                        android:layout_alignLeft="@+id/menu_icon"
                        android:layout_alignStart="@+id/menu_icon" />

                </RelativeLayout>

            </RelativeLayout>



            <!--用于设置菜单项-->
            <ListView
                android:id="@+id/lvMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:dividerHeight="1dp"
                android:divider="@null" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/logout"
                    android:background="@color/blue"
                    android:layout_weight="1"
                    android:text="@string/logout"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/close"
                    android:background="@color/blue"
                    android:layout_weight="1"
                    android:text="@string/exit"
                    />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>