<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray">

    <include layout="@layout/headbar_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/user_manager_icon"
        android:layout_marginTop="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_alignBottom="@+id/user_manager_icon"
        android:layout_alignRight="@+id/user_manager_icon"
        android:layout_alignEnd="@+id/user_manager_icon" />

    <LinearLayout
        android:id="@+id/user_manager_name_title"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/user_manager_icon"
        android:layout_marginTop="32dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/user_manager_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="4"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_manager_title"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/user_manager_name_title"
        android:layout_marginTop="8dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="签名"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="4"
            android:textSize="20sp" />
    </LinearLayout>


        <TextView
            android:id="@+id/user_manager_introduction"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_below="@+id/user_manager_title"
            android:text="@string/no_introduction"
            android:textSize="20sp" />

    <Button
        android:id="@+id/user_manager_submit"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/default_button_height"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:text="@string/submit"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
</LinearLayout>