<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <include layout="@layout/headbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/comments_iv_icon"
                    android:layout_toRightOf="@+id/comments_iv_icon"
                    android:layout_toEndOf="@+id/comments_iv_icon"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="12dp"
                    android:textSize="20sp"
                    android:id="@+id/comments_tv_name" />

                <TextView
                    android:text="@string/text"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/comments_iv_icon"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/comments_tv_text"
                    android:layout_width="392dp" />

                <com.facebook.drawee.view.SimpleDraweeView
                    android:layout_width="match_parent"
                    android:layout_below="@+id/comments_tv_text"
                    android:layout_alignLeft="@+id/comments_tv_text"
                    android:layout_alignStart="@+id/comments_tv_text"
                    android:layout_marginTop="10dp"
                    android:scaleType="fitCenter"
                    android:id="@+id/comments_iv_image"
                    android:layout_marginRight="10dp"
                    android:layout_height="400dp" />

                <TextView
                    android:text="11111"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:id="@+id/comments_tv_good"
                    android:gravity="center"
                    android:layout_marginLeft="22dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="22dp"
                    android:drawableLeft="@drawable/ungood"
                    android:drawablePadding="10dp"
                    android:layout_below="@+id/comments_iv_image"
                    android:layout_alignLeft="@+id/comments_iv_image"
                    android:layout_alignStart="@+id/comments_iv_image" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/share"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="38dp"
                    android:layout_marginEnd="38dp"
                    android:id="@+id/comments_iv_share"
                    android:layout_alignBottom="@+id/comments_tv_comments"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:text="22222"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:drawableLeft="@drawable/comments"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="10dp"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/comments_tv_comments"
                    android:layout_below="@+id/comments_iv_image"
                    android:layout_toRightOf="@+id/comments_tv_name"
                    android:layout_toEndOf="@+id/comments_tv_name" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/comments_iv_icon"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:layout_alignLeft="@+id/comments_tv_text"
                    android:layout_alignStart="@+id/comments_tv_text" />


            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/gray"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:divider="@color/gray"
                android:dividerHeight="2dp"
                android:id="@+id/lv_comments">

            </ListView>

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:gravity="center" >
        <EditText
            android:id="@+id/comments_et_comment"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/default_edittext_height"
            android:hint="@string/comments_hint"
            android:background="@null"
            android:paddingRight="60dp"
            android:maxLength="300"
            android:paddingLeft="55dp" >
        </EditText>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="22dp"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/edit" />

        <Button
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:id="@+id/comments_send"
            android:layout_marginRight="10dp"
            android:layout_gravity="right|center_vertical"
            android:text="@string/send"
            android:textColor="@color/white"
            android:background="@drawable/button_bg"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

</LinearLayout>